Fixing z-index in CSS

--- a/UmbracoGivskud/assets/style/sass/_header.scss
+++ b/UmbracoGivskud/assets/style/sass/_header.scss
@@ -22,7 +22,7 @@
 .header-filter {
     position: fixed;
     top: 0;
-    z-index: 100;
+    z-index: 7000;
     background-color: $sand;
     text-align: center;
     height: $barsHeight;
